--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -2,7 +2,10 @@
  <section class="sub-header">
   <div class="container">
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-5 d-flex align-items-center">
+		<button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
+					<i class="fas fa-arrow-left"></i>
+				</button>
         <ol class="breadcrumb">
           <li class="breadcrumb-item active" aria-current="page">Candidate View Jobs</li>
         </ol>
