--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="col-lg-5 text-right">
 			
-        <span class="mr-1">
+        <span class="mr-1" *ngIf="!isMultipleMatches">
           <a
           [class.disabled]="!selectedCover?.file"
           (click)="selectedCover?.file && onToggleCoverForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedCover?.file))" class="btn btn-outline-orange  btn-sm" href="javascript:;">
@@ -35,7 +35,7 @@
             <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate }}
           </a>
         </span>
-		<a *ngIf="!isMail" (click)="onTabChange()" style="margin-top: .25rem;" class="btn btn-outline-green btn-sm mr-1" href="javascript:;" title="Edit"><i
+		<a *ngIf="!isMail && isMatchesView" (click)="onTabChange()" style="margin-top: .25rem;" class="btn btn-outline-green btn-sm mr-1" href="javascript:;" title="Edit"><i
             class="fas fa-tasks" ></i> Matches </a>
         <span  *ngIf="isMail && jobInfo?.id">
           <a (click)="onToggleSendMail(true)"  class="btn btn-outline-orange btn-sm " href="javascript:;">
