--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -895,7 +895,7 @@
 								</span>
 							</ng-container>
 							<ng-container *ngFor="let item of matchingUsers?.profile?.language_known; let first = first;">
-								<span *ngIf="moreElement && checkLanExtra(postedJobsDetails.language,item.language)">
+								<span *ngIf="moreElement && checkLanExtra(postedJobsDetails.language,item.language,'vals')">
 								  <i class="fa fa-info-circle text-blue" ></i>
 								  {{findLanguageArray(item.language)}}
 								</span>
@@ -1348,7 +1348,7 @@
 								</span>
 							</ng-container>
 							<ng-container *ngFor="let item of matchingUsers?.profile?.language_known; let first = first;">
-								<span *ngIf="moreElement && checkLanExtra(postedJobsDetails.language,item.language)">
+								<span *ngIf="moreElement && checkLanExtra(postedJobsDetails.language,item.language,'vals')">
 								  <i class="fa fa-info-circle text-blue" ></i>
 								  {{findLanguageArray(item.language)}}
 								</span>
