--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -266,7 +266,7 @@
 					 </ul>
 				</div>
 			</div>
-			<div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='0'">
+			<!-- <div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='0'">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 						 <li class=" list-group-item text-capitalize">{{"postJob.remote" | translate }}</li>
@@ -293,7 +293,7 @@
 						</li>
 					 </ul>
 				</div>
-			</div>
+			</div> -->
 			<div class="row   info-box" *ngIf="jobInfo?.match_select?.language=='0'">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
@@ -597,7 +597,7 @@
 					 </ul>
 				</div>
 			</div>
-			<div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='1'">
+			<!-- <div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='1'">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 						 <li class=" list-group-item text-capitalize">{{"postJob.remote" | translate }}</li>
@@ -624,7 +624,7 @@
 						</li>
 					 </ul>
 				</div>
-			</div>
+			</div> -->
 			<div class="row   info-box" *ngIf="jobInfo?.match_select?.language=='1'">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
@@ -928,7 +928,7 @@
 					 </ul>
 				</div>
 			</div>
-			<div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='2' ">
+			<!-- <div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='2' ">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 						 <li class=" list-group-item text-capitalize">{{"postJob.remote" | translate }}</li>
@@ -955,7 +955,7 @@
 						</li>
 					 </ul>
 				</div>
-			</div>
+			</div> -->
 			<div class="row   info-box" *ngIf="jobInfo?.match_select?.language=='2'">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
@@ -1232,7 +1232,7 @@
 					 </ul>
 				</div>
 			</div>
-			<div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='' && jobInfo?.remote ">
+			<!-- <div class="row info-box" *ngIf="jobInfo?.match_select?.remote=='' && jobInfo?.remote ">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 						 <li class=" list-group-item text-capitalize">{{"postJob.remote" | translate }}</li>
@@ -1259,7 +1259,7 @@
 						</li>
 					 </ul>
 				</div>
-			</div>
+			</div> -->
 			<div class="row   info-box" *ngIf="jobInfo?.match_select?.language=='' && jobInfo?.language ">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
