--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.css
@@ -12,17 +12,15 @@
 }
 .btn-fltr {
     color: #212529;
-    background-color: #ffffff;
-    border-color: #ffffff;
-    box-shadow: 2px 2px 2px 1px #dfdfdf;
-    margin-right: 10px;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+    margin-right: 3px;
     margin-bottom: 14px;
     padding: 4px 8px;
     font-size: 12px;
 }
 .btn-fltr:hover {
 
-    box-shadow: 3px 3px 3px 2px #4caf5057;
     color: #000;
     background-color: #e2e6ea;
     border-color: #dae0e5;
@@ -30,6 +28,5 @@
 .btn-fltr-active {
     background-color: #e2e6ea;
     border-color: #dae0e5;
-    box-shadow: 3px 3px 3px 2px #4caf5057;
     color: #000;
 }
