--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -1,6 +1,6 @@
 <div class=" info-box">
-	<div class="col-lg-12">
-		<div class="accordion mt-3 ">
+	<div class="col-lg-12 mt-3">
+		<div class="accordion ">
 			<div class="pj-title "  *ngIf="!isMultipleMatches">
 				<h6 class="mb-0" type="button">
 					Required Skills
@@ -337,7 +337,7 @@
                       </li>
                       <!-- <li class="list-group-item"><span class="matchTxt"><i class="fas fa-check text-green "></i> Yes </span></li> -->
                     </ul>
-			</div>
+			</div><!-- 
 			<div class=" info-box" *ngIf="jobInfo.match_select?.remote=='0'">
 				<ul class="list-group">                      
                       <li class="list-group-item">
@@ -365,7 +365,7 @@
                         </span>
                     </li>
                 </ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.language=='0'">
 				<ul class="list-group">			
 					<li class="list-group-item text-capitalize">		
@@ -722,7 +722,7 @@
                       </li>
                       <!-- <li class="list-group-item"><span class="matchTxt"><i class="fas fa-check text-green "></i> Yes </span></li> -->
                     </ul>
-			</div>
+			</div><!-- 
 			<div class=" info-box" *ngIf="jobInfo.match_select?.remote=='1'">
 				<ul class="list-group">                      
                       <li class="list-group-item">
@@ -750,7 +750,7 @@
                         </span>
                     </li>
                 </ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.language=='1'">
 				<ul class="list-group">			
 					<li class="list-group-item text-capitalize">		
@@ -1109,7 +1109,7 @@
                       </li>
                       <!-- <li class="list-group-item"><span class="matchTxt"><i class="fas fa-check text-green "></i> Yes </span></li> -->
                     </ul>
-			</div>
+			</div><!-- 
 			<div class=" info-box" *ngIf="jobInfo.match_select?.remote=='2'">
 				<ul class="list-group">                      
                       <li class="list-group-item">
@@ -1137,7 +1137,7 @@
                         </span>
                     </li>
                 </ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.language=='2'">
 				<ul class="list-group">			
 					<li class="list-group-item text-capitalize">		
@@ -1310,7 +1310,7 @@
                      </li>
                 </ul>
 			</div>
-			<div class=" info-box" *ngIf="jobInfo.match_select?.certification==''">
+			<div class=" info-box" *ngIf="jobInfo.match_select?.certification=='' && jobInfo?.certification ">
 				<ul class="list-group">
 					<li class="list-group-item">
                         <ng-container *ngFor="let item of jobInfo.certification; let first = first;">
@@ -1330,7 +1330,7 @@
                      </li>
                  </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.type==''">
+			<div class="  info-box" *ngIf="jobInfo.match_select?.type=='' && jobInfo?.type ">
 				<ul class="list-group">
                       <li class="list-group-item">
                         <span *ngIf="matchedElement && checkType(userInfo?.job_type,jobInfo.type,'type')">
@@ -1347,7 +1347,7 @@
                       </li>
                 </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.employer_role_type==''">
+			<div class="  info-box" *ngIf="jobInfo.match_select?.employer_role_type=='' && jobInfo?.employer_role_type">
 				<ul class="list-group">
 					<li class="list-group-item">
                         <span *ngIf="matchedElement && (jobInfo.employer_role_type == userInfo?.employer_role_type)">
@@ -1361,7 +1361,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.availability==''">
+			<div class="  info-box" *ngIf="jobInfo?.availability  && jobInfo.match_select?.availability==''">
 				<ul class="list-group">
 					<li class="list-group-item">
                         <span *ngIf="matchedElement && (jobInfo.availability >= userInfo?.availability)">
@@ -1401,7 +1401,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.facing_role==''">
+			<div class="  info-box" *ngIf="jobInfo.facing_role && jobInfo.match_select?.facing_role==''">
 				<ul class="list-group">
 					<li class="list-group-item" >
                         <span *ngIf="matchedElement && (jobInfo.facing_role == userInfo?.facing_role)">
@@ -1425,7 +1425,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.training_experience==''">
+			<div class="  info-box" *ngIf="jobInfo?.training_experience &&  jobInfo.match_select?.training_experience==''">
 				
 				<ul class="list-group">
 					<li class="list-group-item" >
@@ -1450,7 +1450,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class=" info-box" *ngIf="jobInfo.match_select?.end_to_end_implementation==''">
+			<div class=" info-box" *ngIf="jobInfo.match_select?.end_to_end_implementation=='' && jobInfo?.end_to_end_implementation  ">
 				<ul class="list-group">
 					<li class="list-group-item">
                          <span *ngIf="matchedElement && (jobInfo.end_to_end_implementation <= userInfo?.end_to_end_implementation)">
@@ -1466,7 +1466,7 @@
                      </li>
                  </ul>
 			</div>
-			<div class=" info-box" *ngIf="jobInfo.match_select?.education==''">
+			<div class=" info-box" *ngIf="jobInfo.match_select?.education=='' && jobInfo?.education">
 				<ul class="list-group">
                       <li class="list-group-item">
                         <span *ngIf="matchedElement && checkType(userInfo?.education_qualification,jobInfo.education,'education')">
@@ -1480,7 +1480,7 @@
                       </li>
                 </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.travel_opportunity==''">
+			<div class="  info-box" *ngIf="jobInfo.match_select?.travel_opportunity=='' && jobInfo?.travel_opportunity ">
 				<ul class="list-group">
                       <li class="list-group-item">
                         <span *ngIf="matchedElement && (jobInfo.travel_opportunity >= userInfo?.travel)">
@@ -1496,7 +1496,7 @@
                       </li>
                       <!-- <li class="list-group-item"><span class="matchTxt"><i class="fas fa-check text-green "></i> Yes </span></li> -->
                     </ul>
-			</div>
+			</div><!-- 
 			<div class=" info-box" *ngIf="jobInfo.match_select?.remote==''">
 				<ul class="list-group">                      
                       <li class="list-group-item">
@@ -1524,8 +1524,8 @@
                         </span>
                     </li>
                 </ul>
-			</div>
-			<div class=" info-box" *ngIf="jobInfo.match_select?.language==''">
+			</div> -->
+			<div class=" info-box" *ngIf="jobInfo.match_select?.language=='' && jobInfo?.language ">
 				<ul class="list-group">			
 					<li class="list-group-item text-capitalize">		
 						<ng-container *ngFor="let item of jobInfo.language; let first = first;">
