--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -619,6 +619,7 @@
 									</mat-chip>
 									<input placeholder="" #chipsInput
 									(onAddressChange)="handleAddressChange($event,id)"
+									[options]='options' 
 									ngx-google-places-autocomplete
 										[matChipInputFor]="chipLists"
 										[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
