--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -92,7 +92,7 @@
         <div class="sidebar-widget text-left">
           <div class="card" *ngFor="let item of postedJobs; let i=index">
             <div class="card-body p-3" *ngIf="item?.id != postedJobsDetails?.id">
-              <a href="javascript:;" [routerLink]="['/employer/job-detail-view', item?.id]">
+              <a href="javascript:;" [routerLink]="['/employer/job-detail-view', 'details']" [queryParams]="{id: item?.id}" >
                 <h5 class="text-capitalize">{{item?.title}}</h5>
               </a>
               <!-- <h6 class="mb-2">Matchings - 23</h6>
