--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -91,7 +91,7 @@
 			</div>
 		</div> -->
 	</div>
-	<div *ngIf="childForm?.value?.jobPref?.willing_to_relocate">
+	<div *ngIf="childForm?.value?.jobPref?.willing_to_relocate && IsShow">
 	<!-- <h6 class="font-weight-bold mt-4">{{"postYourResume.preferredLocation" | translate }}</h6> -->
 	<div class="row mt-3">
 	<div class="col-lg-9 col-md-12" >	
@@ -107,7 +107,9 @@
 						</mat-chip>
 						<input placeholder="" #chipsInput
 						(onAddressChange)="handleAddressChange($event)"
+						[options]='options' id="preferredLocation"
 						ngx-google-places-autocomplete
+						
 							[matChipInputFor]="chipList"
 							[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
 							[matChipInputAddOnBlur]="addOnBlur"
